# medvedchat-qt

./: .gitignore  CMakeLists.txt  CMakeSettings.json  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  medvedchat-qt.pro  protocol.cpp  protocol.h  style.h  value.cpp  value.h
